resources/styles.css
body {
  background: #F2F0E7 url(/images/bg1.png) no-repeat center 60px;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 16px;
  color: #333;
  font-weight: 300;
}

.navbar {
  border: 0;
  color: #fff;
  background: url(/images/Top.png) repeat-x scroll 0px 100% transparent;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  height: 60px;
  margin-bottom: 60px;
}

.container {
  width: 1170px;
  padding: 0;
}

.container-top {
  margin-top: 6px;
}

.toprow {
  margin: 0 0 30px 0;
  width: 100%;
}

.toprow td:nth-child(3) {
  color: #fff;
  font-size: 30px;
}

.toprow td:first-child {
  width: 289px;
}

.toprow td:nth-child(2) {
  padding-right: 14px;
}

.toprow td:last-child {
  text-align: right;
  background-color: transparent;
}

.panel, .panel-login {
  border: 0;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  background-color: #f8f9fa;
  min-height: 600px;
  margin-bottom: 0px;
  margin-top: 40px;

}

.panel-body {
  padding: 0px 40px;
}

.table > thead > tr > th {
  border-bottom: 1px solid #DDD;
  color: #000;
  font-weight: 300;
  text-align: left;
  padding: 20px 10px;
}

.table > tbody > tr > td {
  border-top: 0;
  text-align: left;
  padding: 10px;
}

.valueTable> thead > tr > th, .valueTable> tbody > tr > td{
  text-align: right !important;
  width: 75px;
}

.valueTable> thead > tr > th:first-child , .valueTable> tbody > tr > td:first-child{
  text-align: left !important;
  width: auto !important;
}


.table {
  margin-top: 20px;
}

.userViewPublicDescription {
  font-size:12px;
}

#adminMetricTable tr.metric {
  border-bottom: solid 1px #DDD;
}

#metrics-table tbody {
  border: none;
}

#metrics-table tbody:nth-child(odd) {
  background: rgba(240, 240, 240, 0.5);
}

#metrics-table tbody:hover {
  background: rgba(240, 240, 240, 1);
}
.form-control {
  max-width:815px;
  }
.smallInputFields {
  max-width:160px!important;
}
.panel-heading {
  padding: 25px 40px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
  position: relative;
  background-color: #fff !important;
  z-index: 2;
}

.panel-heading > .name, .translationHeading {
  color: #006699;
  font-size: 30px;
}

.panel-heading .budget {
  color: #6f6d65;
}

.missingGoals {
  text-align: center;
  padding: 200px;
}
.startLevel, .targetLevel {
  text-align: right !important;
}


.saveGoalButton, .cancelGoalButton, .publicButton {
  height: 35px;
  width: 35px;
  background-color: Transparent;
  background: url(/image/btn.png) no-repeat;
  font-family: "Glyphicons Halflings";
  padding: 0;
  font-size: 16px;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
  overflow: hidden;
  color: lightgray;
  margin-left: -15px;

}

.action-button .saveGoalButton:hover {
  color: green;
  background-color: transparent;
}

.cancelGoalButton:hover {
  color: red;
  background-color: transparent;
}

.modifyButton, .metricsButton, .deleteButton, .translationButton, .glyphicon-sort, .chart-button {
  background-color: Transparent;
  border: none;
  cursor: pointer;
  overflow: hidden;
  color: lightgray;
  font-size: 16px;
}

tr.metric .glyphicon-sort{
  padding-top: 15px;
}


.modifyButton:hover, .metricsButton:hover, .deleteButton:hover, .translationButton:hover, .glyphicon-sort:hover, .chart-button:hover {
  color: #ffcc00;
  background-color: transparent;
}

.measured .glyphicon-pencil, .forecasted .glyphicon-pencil, .yearlyBudget .glyphicon-pencil {
  color: lightgrey !important;
}

.measured .glyphicon-pencil:hover, .forecasted .glyphicon-pencil:hover, .yearlyBudget .glyphicon-pencil:hover {
  color: #ffcc00;
}

.forecasted{
  white-space: nowrap;
}

.footer {
  background: url(/images/bottom.png) repeat scroll 0px 100% transparent;
  height: 295px;
  border-radius: 0px;
}

.publicButton{
  margin: 0 !important;
  height: 23px !important;
  width: 28px !important;
  margin-bottom: 5px !important;
}

.chart-button {
  float: right;
  font-size: 30px;
}

#chart{
  width: 900px;
  height: 400px;
  margin:auto
}


.hand-pointer {
  cursor: pointer;
  cursor: hand;
}

#saveTranslationButton, #goalSaveButton, .authentication-button, #submit, #metricSaveButton {
  margin-left: 20px;
  background: #084381;
  background: -moz-linear-gradient(left, #084381 0%, #0081b2 100%);
  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #084381), color-stop(100%, #0081b2));
  background: -webkit-linear-gradient(left, #084381 0%, #0081b2 100%);
  background: -o-linear-gradient(left, #084381 0%, #0081b2 100%);
  background: -ms-linear-gradient(left, #084381 0%, #0081b2 100%);
  background: linear-gradient(to right, #084381 0%, #0081b2 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#084381', endColorstr='#0081b2', GradientType=1) box-shadow : 0 0 0 px 2 px rgba(0, 0, 0, 0.2);
  border: 0;
  width: 120px;
  height: 30px;
  padding: 0px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 11px;
  color: white;
  font-family: "Roboto Condensed";
  border-radius: 2px;
}

#metricSaveButton{
  margin-left: 0 !important;
  margin-bottom: 20px;
}

#goalSaveButtonTd{
  vertical-align: bottom;
}

#saveTranslationButton{
  float:right;
  margin-right: 10px;
  margin-bottom: 30px;
}

#submit {
  margin-left: 2px;
  padding: 0px;
}

.glyphicon-arrow-right {
  color: #ffffff;
  padding-left: 10px;
}

.glyphicon-lock {
  font-size: 10px;
  padding-right: 5px;
}
.glyphicon-user{
  margin-top: 14px;
  margin-right: 20px;
  background-color: transparent;
  color: #ffcc00;
  border: none;

}

.forecasted > span.value, .forecast-indicator {
  color: #333
}

.values{
  text-align:right !important;
}

.symbol {
  height: 55px;
  width: 2px;
  background-color: #fff;
}

.switch-button {
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.5);;
}

.switch-button.active {
  color: #ffcc00;
  background-color: rgba(0, 0, 0, 0.5);
}

.languageButtons {
  font-size: 11px;
  margin-bottom: 6px;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: transparent;
  margin-top: 8px;
  position: relative;
  margin-right: 40px;
}

.languageButtons:before,
.languageButtons:after {
  content: '';
  position: absolute;
  display: block;
  left: -10px;
  top: 6px;
  height: 15px;
  border-left: 1px solid #fff;
}

.languageButtons:after {
  left: auto;
  right: -10px;
}

.languageButtons a {
  color: rgba(255, 255, 255, 0.5);
  text-decoration: none;
  cursor: pointer;
  display: inline-block;
  padding: 6px;
}

.languageButtons a.active {
  color: #ffcc00;
  background-color: rgba(0, 0, 0, 0.5);
}

td.actions .action-button {
  display: inline-block;
}

td.actions {
  white-space: nowrap;
}

.ui-state-highlight {
  background-color: #E0E0E0;
}

input.modify-value {
  max-width: 120px;
}

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}

.clearfix {
  display: inline-block;
}

* html .clearfix {
  height: 1%;
}

.clearfix {
  display: block;
}

.login-center {
  padding: 140px 470px;
}

#login-h3 {
  color: #069;
  font-size: 30px;

}

.headingName {
  color: #006699;
  font-size: 30px;
}

.metricHeading{
  color: #006699;
}


.footer {
  position: relative;
  padding-top: 300px;
  margin-top: -50px;
  height: 100px;
  z-index: -1;
!important;
}

.alert-danger, .alert-success {
  width: 450px;
  text-align: center;
  padding: 8px 0px;
  margin: auto;
  margin-bottom: 10px;
}

.greenValue {
  color: green;
}

.redValue {
  color: red;
}


tr.metric div, .addMetric div {
  display: inline-block;
}

.metricContent ul, .addMetric ul {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 20px;
}

.labelsStyle {
  font-weight: bold;
}

li span.value {
  padding-right: 10px;
}

